--- a/styles.css
+++ b/styles.css
@@ -627,6 +627,7 @@ h1 {
     font-style: normal;
     font-weight: 300;
     padding-bottom: 30px;
+    box-shadow: 0 3px 5px rgba(0,0,0,0.3);
 
 }
 
